Sun Sep 19 13:44:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_SO): fix an oversight of replace
	  RUBY_INSTALL_NAME with RUBY_SO_NAME.  a patch from Jeremy Evans
	  at [ruby-core:32474].

Sun Aug 29 12:19:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_failed): should honor encoding.  [ruby-core:31915]

Fri Aug 27 12:26:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* object.c (rb_obj_class): remove mention of obsolete method.
	  a patch from Run Paint Run Run at [ruby-core:31842].

Thu Aug 26 10:37:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regint.h (OnigStackIndex): the type should be intptr_t.
	  Original Oniguruma assumes the size of long and that of void *
	  are equal, but it's not true on LLP64 platform: mswin64.
	  originally patched by shintaro kuwamoto [ruby-dev:42133]

Thu Aug 26 10:38:11 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* test/dl/test_base.rb: AIX does not have dynamically loadable lib[cm].

	* test/fiddle/helper.rb: AIX does not have dynamically loadable lib[cm].

Wed Aug 25 03:42:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): workaround for VC9 for x64.
	  reported by kuwamoto shintaro in [ruby-dev:42125].

Mon Aug 23 13:09:27 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* backport r29071 from ruby_1_8;

	  * ext/openssl/ossl_asn1.c (obj_to_asn1bool): fixed ASN1::Boolean
	    encoding issue for OpenSSL 1.0.0 compatibility.
	    ASN1::Boolean.new(false).to_der wrongly generated "\1\1\377" which
	    means 'true'.

	    ASN1_TYPE_set of OpenSSL <= 0.9.8 treats value 0x100 as 'false'
	    but OpenSSL >= 1.0.0 treats it as 'true'.  ruby-ossl was using
	    0x100 for 'false' for backward compatibility.  Just use 0x0 for
	    the case OpenSSL >= OpenSSL 0.9.7.

	  * test/openssl/test_asn1.rb: test added.

Mon Aug 23 22:30:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (version.o): depends on both of version.h and